--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -63,7 +63,7 @@ Niech $w(x)$  dla $x = 0, ..., n-1$ będzie szukanym wzorcem, a $f(t)$ dla $t = 
 Wtedy możemy znaleźć takie $a$, że błąd średniokwadratowy $E(t)$ pomiędzy $w(x)$ i $a f(t+x)$ jest minimalny.
 Możemy to zapisać w postaci
 \[
-  E(t) = \min_{a \in R} \left\{ \sum_{x=0}^{n-1}  \left( w(x) - a f(t+x) \right) ^2 \right\}.
+  E(t) = \min_{a \in R} \left\{ \sum_{x=0}^{n-1}  \left( w(x) - a f(t+x) \right) ^2 \right\}, \quad \text{dla } t = 0, ..., m-n.
 \]
 Po podniesieniu wyrażenia w nawiasie do kwadratu otrzymujemy
 \[
