--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -92,7 +92,7 @@ Sygnał z modułów ultradźwiękowych dociera do \textit{stm32f4-discovery} za 
 Schemat budowy przystawki przedstawia rysunek \ref{fig:przystawka}.
 Przystawka przystosowuje maksymalne amplitudy zebranych sygnałów do wartości akceptowalnych przez  
 przetworniki analogowo-cyfrowe procesora STM32F407VGT6.
-Wartości te muszą mieścić się w zakresie od \SI{0}{V} do \SI{3,3}{V}.
+Wartości te muszą mieścić się w~zakresie od \SI{0}{V} do \SI{3,3}{V}.
 
 Zastosowano w niej układ TLV2774 \cite{bib:TLV2774}, który zawiera 4 wzmacniacze operacyjne typu
 \textit{rail-to-rail}. Trzy z nich wykorzystano jako ostatni stopień wzmocnienia sygnałów ultradźwiękowych. 
