--- a/mgr/praca/podsumowanie.tex
+++ b/mgr/praca/podsumowanie.tex
@@ -23,7 +23,7 @@ Zalety:
 \end{itemize}
 Wady:
 \begin{itemize}
- \item Duże gabaryty nadajnika i odbiornika.
+ \item Duże gabaryty nadajnika i~odbiornika.
  
  \item Duża czułość na zmiany temperatury -- jest to najpoważniejsza wada prezentowanego rozwiązania.
  Zauważmy, że zmiana temperatury otoczenia o \ang{1}\SI{}{C} powoduje zmianę prędkości dźwięku o 0,17\%,
@@ -33,12 +33,12 @@ Wady:
  
  \item Długi czas odświeżania -- prezentowany prototyp dokonuje pomiarów co \SI{350}{ms}, czyli około 3 pomiarów 
  na sekundę. Ponieważ mierzymy cztery niezależne sygnały (z czterech głośników), poszczególne sygnały mierzone są co \SI{87}{ms}.
-  Dźwięk poruszający się z prędkością \SI{346}{m/s}  przebędzie  w tym czasie odległość \SI{29.7}{m}.
+  Dźwięk poruszający się z~prędkością \SI{346}{m/s}  przebędzie  w tym czasie odległość \SI{29.7}{m}.
  Tak duży dystans w~stosunku do powierzchni roboczej jest konieczny, by zapobiec nakładaniu się sygnałów
  (które po odbiciu się od ścian mogłyby wpłynąć na kolejne pomiary; czas \SI{87}{ms} pozwala 
  na ich całkowite rozproszenie).
  Zakłócaniu pomiarów można także zaradzić, nadając za każdym razem inny rozróżnialny sygnał, to podejście 
- wymaga jednak nadajników i odbiorników o większych możliwościach wysterowania.
+ wymaga jednak nadajników i~odbiorników o~większych możliwościach wysterowania.
  
  \item Stosunkowo mały kąt widzenia -- zastosowane przetworniki piezoelektryczne są przetwornikami kierunkowymi, co 
  ogranicza  maksymalny kąt, pod jakim można ustawić nadajnik względem odbiornika. W prezentowanym 
@@ -48,7 +48,7 @@ Wady:
  \item Ograniczone możliwości wysterowania rezonatorów piezoelektrycznych -- 
  zastosowane rezonatory nie nadają się do generowania krótkich impulsów, co zdecydowanie uprościłoby mierzenie odległości.
  
- \item Problem z ustaleniem pozycji i orientacji nadajnika w ruchu -- w prezentowanym urządzeniu 
+ \item Problem z ustaleniem pozycji i~orientacji nadajnika w ruchu -- w prezentowanym urządzeniu 
  jeden pomiar pozycji i orientacji wymaga określania położenia czterech głośników w różnych odstępach czasu.
  Jeśli podczas takiego pomiaru nadajnik porusza się ze zbyt dużą prędkością, to otrzymamy położenia
  przesunięte względem siebie zgodnie z kierunkiem ruchu nadajnika. Takie przesunięcie negatywnie wpływa na 
