--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -4,8 +4,8 @@
 
 W dzisiejszym świecie wyraźnie wzrasta zapotrzebowanie na urządzenia,
 które potrafią określić swoje położenie i orientację w przestrzeni.
-Urządzenia takie mają szerokie zastosowanie w wielu dziedzinach, m.in. w
-wirtualnej rzeczywistości, rozszerzonej rzeczywistości, kartografii lub 
+Urządzenia takie mają szerokie zastosowanie w~wielu dziedzinach, m.in. 
+w~wirtualnej rzeczywistości, rozszerzonej rzeczywistości, kartografii lub 
  podczas trójwymiarowego skanowania obiektu.
 Przykładowo okulary do wirtualnej rzeczywistości, takie jak \textit{Oculus Rift} \cite{bib:OculusRift} 
 czy \textit{castAR} \cite{bib:castAR},
@@ -30,11 +30,11 @@ urządzenia dodano zewnętrzną kamerę śledzącą pozycję głowy.
  taką metodę wykorzystano w \textit{Microsoft Kinnect} \cite{bib:MicrosoftKinect}.
  Urządzenie wyświetla na otoczenie stały wzór punktów, następnie kamerą na podczerwień
  zbiera informację o zniekształceniu danego wzoru i na tej podstawie odtwarza  
- trójwymiarową strukturę otoczenia i położenie urządzenia w tym otoczeniu.
+ trójwymiarową strukturę otoczenia i~położenie urządzenia w~tym otoczeniu.
  Podobną metodę wykorzystuje \textit{Oculus Rift development kit 2} \cite{bib:OculusRiftDK2} oraz 
  \textit{castAR} \cite{bib:castAR} -- tutaj za źródła światła służą diody podczerwone umieszczone na okularach.
  Emitowane przez nie światło rejestruje kamera umieszczona przed użytkownikiem.
- Komputer na podstawie względnego położenia widocznych punktów określa położenie i orientację
+ Komputer na podstawie względnego położenia widocznych punktów określa położenie i~orientację
  okularów w przestrzeni.
  Zaletą tego rozwiązania są stałe punkty odniesienia (kamera), a także możliwość pomiaru wielu punktów naraz.
  Wadami są stosunkowo niska rozdzielczość, szczególnie w osi Z, i duży strumień danych do obróbki.
