--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -29,7 +29,7 @@ urządzenia dodano zewnętrzną kamerę śledzącą pozycję głowy.
  światła odbitego za pomocą sensorów, zazwyczaj kamer -- 
  taką metodę wykorzystano w \textit{Microsoft Kinnect} \cite{bib:MicrosoftKinect}.
  Urządzenie wyświetla na otoczenie stały wzór punktów, następnie kamerą na podczerwień
- zbiera informację o zniekształceniu danego wzoru i na tej podstawie odtwarza  
+ zbiera informację o zniekształceniu danego wzoru i~na tej podstawie odtwarza  
  trójwymiarową strukturę otoczenia i~położenie urządzenia w~tym otoczeniu.
  Podobną metodę wykorzystuje \textit{Oculus Rift development kit 2} \cite{bib:OculusRiftDK2} oraz 
  \textit{castAR} \cite{bib:castAR} -- tutaj za źródła światła służą diody podczerwone umieszczone na okularach.
