--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -9,7 +9,7 @@ Odbiornik składa się z następujący części (rysunek \ref{fig:odbiornik_szki
  \item trzech modułów ultradźwiękowych przetwarzających dźwięk na sygnał elektryczny,
  \item płytki prototypowej \textit{stm32f4-discovery} \cite{bib:stm32f4Discovery} odpowiadającej za komunikację z komputerem,
  \item przystawki do \textit{stm32f4-discovery} przystosowującej sygnały elektryczne z modułów ultradźwiękowych
-  do poziomów akceptowalnych przez tę płytkę oraz wyprowadzającej sygnały sterujące nadajnikiem,
+  do poziomów akceptowalnych przez tę płytkę, z przystawki wyprowadzono również sygnały sterujące nadajnikiem,
  \item ramy, na której umieszczono moduły ultradźwiękowe.
 \end{itemize}
 
