--- a/mgr/praca/zalaczniki.tex
+++ b/mgr/praca/zalaczniki.tex
@@ -9,12 +9,12 @@ Na płycie CD-ROM dołączonej do niniejszej pracy znajdują się:
  \item kod źródłowy programu \textit{scan.py} 
  \item kod źródłowy programu do kalibracji \textit{save-pattern.py}
  \item kod źródłowy biblioteki \textit{mp3d}, na którą składają się:
+  \begin{itemize}
+    \item moduł \textit{mp3d/com.py}
+    \item moduł \textit{mp3d/find\_pattern.py}
+    \item moduł \textit{mp3d/info.py}
+    \item moduł \textit{mp3d/ply.py}
+    \item moduł \textit{mp3d/xyz.py}
+  \end{itemize} 
 \end{itemize}
 
-  \begin{enumerate}
-    \item moduł \textit{mp3d com.py}
-    \item moduł \textit{mp3d find_pattern.py}
-    \item moduł \textit{mp3d info.py}
-    \item moduł \textit{mp3d ply.py}
-    \item moduł \textit{mp3d xyz.py}
-  \end{enumerate} 
