--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -110,8 +110,12 @@ Relatywnie długi czas odświeżania zależy głównie od czasu,
  jakiego potrzebuje fala dźwiękowa, by się rozproszyć,
  tak by jej odbicia od powierzchni ścian nie wpływały na kolejne pomiary.
 
-Należy również wspomnieć o innych pracach, które w podobny sposób podchodzą do problemu pozycjonowania. Przykładowo 
-w pracy \textit{Ultrasonic 3D Wireless Computer Mouse} \cite{bib:mouse} przedstawiono prototyp myszki 3D, której
+Należy nadmienić, że wykorzystanie ultradźwięków do orientacji w terenie jest powszechnie znane,
+z powodzeniem wykorzystują je m.in. nietoperze czy ryjówki podczas echolokacji. Stosuje się je również 
+w przemyśle głównie do pomiaru odległości, np. w samochodach podczas parkowania ultradźwiękami
+mierzona jest odległości od otaczających pojazd obiektów. Powstało również kilka prac wykorzystujących ultradźwięki
+do lokalizacji przestrzennej. 
+Przykładowo w pracy \textit{Ultrasonic 3D Wireless Computer Mouse} \cite{bib:mouse} przedstawiono prototyp myszki 3D, której
 pozycja w przestrzeni określana jest za pomocą ultradźwięków, niemniej wykorzystany przez autorów algorytm wyznaczania 
 odległości jest dużo bardziej podatny na błędy od metody prezentowanej w niniejszej pracy. Ponadto autorzy koncentrują się jedynie
 na określaniu położenia myszki w przestrzeni, bez wyznaczania jej orientacji.
@@ -120,4 +124,10 @@ Kolejne ciekawe rozwiązanie stanowi rękawica dla graczy
 Ona również wykorzystuje ultradźwięki do wyznaczania pozycji
 w przestrzeni, jednak nie odniosła  znaczącego sukcesu komercyjnego ze względu na wyjątkowo niską precyzję urządzenia.
 
+Niniejsza praca podzielona została na cztery rozdziały. W pierwszym rozdziale przedstawiono podstawy teoretyczne lokalizacji oraz orientacji 
+przestrzennej. W podrozdziale 1.3. przedstawiono sposób pomiaru odległości za pomocą ultradźwięków, pokazano 
+również główny czynnik wpływający na dokładność pomiaru.
+Rozdział drugi zawiera opis budowy jak i zasadę działania prezentowanego prototypu. W rozdział trzecim
+przedstawiono zastosowaną metodę przekształcenia zebranych danych ultradźwiękowych na pozycję oraz orientację prototypu.
+Rozdział czwarty podsumowuje prezentowane podejście wyliczając jego zalety jak i wady.
 
