--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -111,9 +111,9 @@ Relatywnie długi czas odświeżania zależy głównie od czasu,
  tak by jej odbicia od powierzchni ścian nie wpływały na kolejne pomiary.
 
 Należy nadmienić, że wykorzystanie ultradźwięków do orientacji w terenie jest powszechnie znane,
-z powodzeniem wykorzystują je m.in. nietoperze czy ryjówki podczas echolokacji. Stosuje się je również 
-w przemyśle głównie do pomiaru odległości, np. w samochodach podczas parkowania ultradźwiękami
-mierzona jest odległości od otaczających pojazd obiektów. Powstało również kilka prac wykorzystujących ultradźwięki
+z powodzeniem wykorzystują je m.in. nietoperze czy niektóre gatunki ryjówek podczas echolokacji. Stosuje się je również 
+w przemyśle, głównie do pomiaru odległości, np. w samochodach podczas parkowania ultradźwiękami
+mierzona jest odległości od otaczających je obiektów. Powstało także kilka prac wykorzystujących ultradźwięki
 do lokalizacji przestrzennej. 
 Przykładowo w pracy \textit{Ultrasonic 3D Wireless Computer Mouse} \cite{bib:mouse} przedstawiono prototyp myszki 3D, której
 pozycja w przestrzeni określana jest za pomocą ultradźwięków, niemniej wykorzystany przez autorów algorytm wyznaczania 
