--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -112,7 +112,7 @@ Relatywnie długi czas odświeżania zależy głównie od czasu,
 
 Należy nadmienić, że wykorzystanie ultradźwięków do orientacji w terenie jest powszechnie znane,
 z powodzeniem wykorzystują je m.in. nietoperze czy niektóre gatunki ryjówek podczas echolokacji. Stosuje się je również 
-w przemyśle, głównie do pomiaru odległości, np. w samochodach podczas parkowania ultradźwiękami
+w przemyśle, głównie do pomiaru odległości, np. w~samochodach podczas parkowania ultradźwiękami
 mierzona jest odległości od otaczających je obiektów. Powstało także kilka prac wykorzystujących ultradźwięki
 do lokalizacji przestrzennej. 
 Przykładowo w pracy \textit{Ultrasonic 3D Wireless Computer Mouse} \cite{bib:mouse} przedstawiono prototyp myszki 3D, której
@@ -127,7 +127,7 @@ w przestrzeni, jednak nie odniosła  znaczącego sukcesu komercyjnego ze względ
 Niniejsza praca podzielona została na cztery rozdziały. W pierwszym rozdziale przedstawiono podstawy teoretyczne lokalizacji oraz orientacji 
 przestrzennej. W podrozdziale 1.3. przedstawiono sposób pomiaru odległości za pomocą ultradźwięków, pokazano 
 również główny czynnik wpływający na dokładność pomiaru.
-Rozdział drugi zawiera opis budowy jak i zasadę działania prezentowanego prototypu. W rozdział trzecim
+Rozdział drugi zawiera opis budowy oraz zasadę działania prezentowanego prototypu. W rozdział trzecim
 przedstawiono zastosowaną metodę przekształcenia zebranych danych ultradźwiękowych na pozycję oraz orientację prototypu.
-Rozdział czwarty podsumowuje prezentowane podejście wyliczając jego zalety jak i wady.
+Rozdział czwarty podsumowuje prezentowane podejście wyliczając jego zalety jak i~wady.
 
