--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -63,7 +63,7 @@ Niech $w(t)$  dla $t = 0, ..., n-1$ będzie szukanym wzorcem, a $f(t)$ dla $t = 
 Wtedy możemy znaleźć takie $a$, że błąd średniokwadratowy $E(t)$ pomiędzy $w$ i $a f |_{\{t, ..., t+n-1\}}$ jest minimalny.
 Możemy to zapisać w postaci
 \[
-  E(t) = \min_{a \in R} \left\{ \sum_{i=0}^{n-1}  \left( w(i) - a f(t+i) \right) ^2 \right\}, \quad \text{dla } t = 0, ..., m-n.
+  E(t) = \min_{a \in R} \left\{ \sum_{i=0}^{n-1}  \left( w(i) - a f(t+i) \right) ^2 \right\} \quad \text{dla } t = 0, ..., m-n.
 \]
 Po podniesieniu wyrażenia w nawiasie do kwadratu otrzymujemy
 \[
