--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -71,7 +71,7 @@ Prezentowany prototyp wyznacza  dwanaście niewiadomych, co daje dwukrotną nadm
 Jest to efekt pożądany, gdyż pozwala na korektę błędów pomiarowych.
 
 
-\section{Pomiar odległości za pomocą ultradźwięków}
+\section{Pomiar odległości za pomocą ultradźwięków}\label{sec:pomiar}
 
 Prezentowane urządzenie do pomiaru odległości wykorzystuje metodę pomiaru czasu, jakiego
 potrzebuje dźwięk, aby pokonać drogę od nadajnika do odbiornika
