--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -125,9 +125,9 @@ Ona również wykorzystuje ultradźwięki do wyznaczania pozycji
 w przestrzeni, jednak nie odniosła  znaczącego sukcesu komercyjnego ze względu na wyjątkowo niską precyzję urządzenia.
 
 Niniejsza praca podzielona została na cztery rozdziały. W pierwszym rozdziale przedstawiono podstawy teoretyczne lokalizacji oraz orientacji 
-przestrzennej. W podrozdziale 1.3. przedstawiono sposób pomiaru odległości za pomocą ultradźwięków, pokazano 
+przestrzennej. W podrozdziale \ref{sec:pomiar} przedstawiono sposób pomiaru odległości za pomocą ultradźwięków, pokazano 
 również główny czynnik wpływający na dokładność pomiaru.
-Rozdział drugi zawiera opis budowy oraz zasadę działania prezentowanego prototypu. W rozdział trzecim
+Rozdział drugi zawiera opis budowy oraz zasadę działania prezentowanego prototypu. W rozdziale trzecim
 przedstawiono zastosowaną metodę przekształcenia zebranych danych ultradźwiękowych na pozycję oraz orientację prototypu.
-Rozdział czwarty podsumowuje prezentowane podejście wyliczając jego zalety jak i~wady.
+Rozdział czwarty podsumowuje prezentowane podejście, wyliczając jego zalety, jak i~wady.
 
